# OpenBimRL-Engine-Native

./: .gitignore  CMakeLists.txt  README.md  library.cpp
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake-test.yml
functions/: calculate_building_bounds.cpp  filter_by_element.cpp  filter_by_guid.cpp  function.cpp  get_bounding_box.cpp
include/: functions.h  lib.h  library.h  types.h  utils.h
include/types/: ifc_typedefs.h  jna_typedefs.h  rule_io.h
test/: test.cpp
test/src/: ifc_elements.h  test.cpp
utils/: guid.cpp  ifc_data.cpp  ifc_data_getters.cpp  ifc_data_handlers.cpp  ifc_data_utils.cpp  ifc_data_utils.h  ifc_geometry_polygon.cpp  ifc_init.cpp  ifc_pointer_to_string.cpp  ifc_serializer.cpp  ifc_wrap.cpp
